Fix popup display on small devices

--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -41,7 +41,7 @@
         @include respond(phone) {
             display: inline-block;
             width: 100%;
-            height: 18.75rem;
+            height: 10.75rem;
             overflow-x: hidden;
         }
     }
@@ -60,6 +60,7 @@
         @include respond(phone) {
             display: block;
             width: 100%;
+            margin-bottom: 0.5rem;
         }
     }
 
